--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,15 +21,25 @@ body {
   }
 }
 
+p {
+  margin-top: 0;
+  font-size: 1.2rem;
+  line-height: 1.9rem;
+}
+
 a {
   font-size: 16px;
   color: #ffffff;
   text-decoration: none;
+  &:hover {
+    color: #dbdbdb;
+  }
 }
 
 .container {
   @media screen and (min-width: 800px) {
     max-width: 80%;
+    margin: 0 auto;
   }
 }
 
@@ -75,12 +85,10 @@ header {
     rgba(255, 255, 255, 0) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1);
-  //   background-color: rgba(0, 0, 0, 0.5);
-  //   border-bottom: 0.5px solid rgba(255, 255, 255, 0.5);
 
   & > div {
     width: 100%;
-    padding: 15px 0;
+    padding: 25px 0 15px;
     align-items: center;
     display: inline-flex;
     justify-content: space-between;
@@ -143,20 +151,49 @@ footer {
   bottom: 0;
   width: 100%;
   display: flex;
+  padding: 20px 0;
   position: absolute;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  background-color: #333333;
   p {
-    font-size: 12px;
+    font-size: 14px;
+  }
+  nav {
+    margin-bottom: 10px;
+    ul {
+      li {
+        a {
+          font-size: 30px;
+        }
+      }
+    }
   }
 }
 
 #topSection {
   width: 100%;
-  padding-top: 65px;
-  min-height: 665px;
-  background-size: auto;
-  background-position: center center;
-  background-image: url("/assets/images/bg.png");
+  display: flex;
+  min-height: 500px;
+  align-items: center;
+  padding: 134px 0 60px;
+  background-color: #333333;
+  // background-size: auto;
+  // background-position: center center;
+  // background-image: url("/assets/images/bg.png");
+  .content {
+    @media screen and (min-width: 800px) {
+      max-width: 40%;
+    }
+    h1 {
+      margin-top: 0;
+      font-size: 3rem;
+      line-height: 3.9rem;
+      margin-bottom: 20px;
+    }
+    p {
+      margin: 0;
+    }
+  }
 }
