--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,10 +8,10 @@ body {
   margin: 0;
   width: 100%;
   display: flex;
-  flex-direction: column;
   color: #ffffff;
+  font-weight: 400;
   color-scheme: dark;
-  padding-bottom: 50px;
+  flex-direction: column;
   justify-content: center;
   background-color: #181a1b;
   font-family: "Roboto", sans-serif;
@@ -19,12 +19,33 @@ body {
     padding-left: 15px !important;
     padding-right: 15px !important;
   }
+  & > section {
+    padding: 40px 0;
+  }
 }
 
 p {
   margin-top: 0;
-  font-size: 1.2rem;
-  line-height: 1.9rem;
+  color: #8d8d8d;
+  font-size: 1rem;
+  line-height: 1.7rem;
+}
+
+h1 {
+  margin-top: 0;
+  font-weight: 700;
+}
+
+h2 {
+  margin-top: 0;
+  font-weight: 500;
+}
+
+h3 {
+  margin-top: 0;
+  font-weight: 300;
+  margin-top: 0;
+  font-weight: 300;
 }
 
 a {
@@ -36,9 +57,34 @@ a {
   }
 }
 
+li,
+td,
+th {
+  color: #8d8d8d;
+}
+
+.button {
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  background-color: #5f5f5f;
+
+  &:hover {
+    color: #ffffff;
+    background-color: #464646;
+  }
+}
+
 .container {
+  width: 100%;
   @media screen and (min-width: 800px) {
     max-width: 80%;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1000px;
     margin: 0 auto;
   }
 }
@@ -93,43 +139,43 @@ header {
     display: inline-flex;
     justify-content: space-between;
 
-    nav {
-      @media screen and (max-width: 500px) {
-        #toggleMenu {
-          width: 40px;
-          height: 40px;
-          line-height: 36px;
-          display: block;
-          font-size: 22px;
-          cursor: pointer;
-          padding: 2px 10px;
-          border-radius: 4px;
-          background-color: #333333;
-        }
-        & > ul {
-          left: 0;
-          top: 46px;
-          opacity: 0;
-          z-index: 9;
-          width: 100%;
-          display: none;
-          display: block;
-          padding: 8px 0;
-          margin-top: 17px;
-          position: absolute;
-          transition-delay: 0.1s;
-          background-color: #333333;
-          transition: opacity 0.3s ease-in-out;
-          li {
-            display: block;
-          }
-          &.active {
-            opacity: 1;
-            display: block;
-          }
-        }
-      }
-    }
+    // nav {
+    //   @media screen and (max-width: 500px) {
+    //     #toggleMenu {
+    //       width: 40px;
+    //       height: 40px;
+    //       line-height: 36px;
+    //       display: block;
+    //       font-size: 22px;
+    //       cursor: pointer;
+    //       padding: 2px 10px;
+    //       border-radius: 4px;
+    //       background-color: #333333;
+    //     }
+    //     & > ul {
+    //       left: 0;
+    //       top: 56px;
+    //       opacity: 0;
+    //       z-index: 9;
+    //       width: 100%;
+    //       display: none;
+    //       display: block;
+    //       padding: 8px 0;
+    //       margin-top: 17px;
+    //       position: absolute;
+    //       transition-delay: 0.1s;
+    //       background-color: #333333;
+    //       transition: opacity 0.3s ease-in-out;
+    //       li {
+    //         display: block;
+    //       }
+    //       &.active {
+    //         opacity: 1;
+    //         display: block;
+    //       }
+    //     }
+    //   }
+    // }
 
     .logo {
       max-width: 200px;
@@ -148,11 +194,11 @@ header {
 }
 
 footer {
-  bottom: 0;
+  // bottom: 0;
   width: 100%;
   display: flex;
   padding: 20px 0;
-  position: absolute;
+  // position: absolute;
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -179,9 +225,19 @@ footer {
   align-items: center;
   padding: 134px 0 60px;
   background-color: #333333;
-  // background-size: auto;
-  // background-position: center center;
-  // background-image: url("/assets/images/bg.png");
+  & > div {
+    @media screen and (min-width: 800px) {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    img {
+      @media screen and (max-width: 800px) {
+        display: none;
+      }
+    }
+  }
   .content {
     @media screen and (min-width: 800px) {
       max-width: 40%;
@@ -194,6 +250,129 @@ footer {
     }
     p {
       margin: 0;
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+      line-height: 1.9rem;
+    }
+  }
+}
+
+#our-services {
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+  }
+  .cards {
+    display: grid;
+    row-gap: 30px;
+    @media screen and (min-width: 800px) {
+      column-gap: 30px;
+      grid-auto-columns: 1fr;
+      grid-auto-flow: column;
+    }
+    .card {
+      position: relative;
+      padding: 25px 20px;
+      border-radius: 4px;
+      background-color: #333333;
+
+      h3 {
+        margin-bottom: 10px;
+      }
+
+      ul {
+        list-style: square;
+        padding-left: 17px;
+        li {
+          margin: 8px 0;
+        }
+      }
+
+      svg {
+        right: 20px;
+        bottom: 20px;
+        opacity: 0.2;
+        font-size: 70px;
+        margin-top: -70px;
+        position: absolute;
+      }
+    }
+  }
+}
+
+#get-in-touch {
+  p {
+    &.success {
+      color: #009c15;
+    }
+    &.error {
+      color: #970000;
+    }
+  }
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+  }
+  form {
+    display: grid;
+    row-gap: 15px;
+    & > div {
+      display: grid;
+      row-gap: 10px;
+      position: relative;
+
+      label {
+        color: #8d8d8d;
+      }
+
+      input,
+      textarea {
+        border: none;
+        outline: none;
+        font-size: 1rem;
+        border-radius: 4px;
+        padding: 10px 20px;
+      }
+
+      textarea {
+        resize: none;
+      }
+    }
+  }
+
+  & > div > .card {
+    padding: 25px 20px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    background-color: #333333;
+    h3 {
+      margin-bottom: 25px;
+      & > svg {
+        margin-right: 12px;
+      }
+    }
+    p {
+      margin-bottom: 0;
+    }
+  }
+  .cards {
+    display: grid;
+    row-gap: 30px;
+    @media screen and (min-width: 800px) {
+      column-gap: 30px;
+      grid-auto-columns: 1fr;
+      grid-auto-flow: column;
+    }
+    .card {
+      padding: 25px 20px;
+      border-radius: 4px;
+      background-color: #333333;
+      h3 > svg {
+        margin-right: 12px;
+      }
+      p {
+        margin-bottom: 0;
+      }
     }
   }
 }
